@@ -57,7 +57,7 @@ public class Allocation
 	public BigDecimal	totalInv = Env.ZERO;
 	public BigDecimal 	totalPay = Env.ZERO;
 	public BigDecimal	totalDiff = Env.ZERO;
-	
+
 	public Timestamp allocDate = null;
 
 	//  Index	changed if multi-currency
@@ -65,37 +65,37 @@ public class Allocation
 	//
 	private int         i_open = 6;
 	private int         i_discount = 7;
-	private int         i_writeOff = 8; 
+	private int         i_writeOff = 8;
 	private int         i_applied = 9;
 	private int 		i_overUnder = 10;
 //	private int			i_multiplier = 10;
-	
+
 	public int         	m_AD_Org_ID = 0;
 
-	private ArrayList<Integer>	m_bpartnerCheck = new ArrayList<Integer>(); 
+	private ArrayList<Integer>	m_bpartnerCheck = new ArrayList<Integer>();
 
 	public void dynInit() throws Exception
 	{
 		m_C_Currency_ID = Env.getContextAsInt(Env.getCtx(), "$C_Currency_ID");   //  default
 		//
 		if (log.isLoggable(Level.INFO)) log.info("Currency=" + m_C_Currency_ID);
-		
+
 		m_AD_Org_ID = Env.getAD_Org_ID(Env.getCtx());
 	}
-	
+
 	/**
 	 *  Load Business Partner Info
 	 *  - Payments
 	 */
 	public void checkBPartner()
-	{		
+	{
 		if (log.isLoggable(Level.CONFIG)) log.config("BPartner=" + m_C_BPartner_ID + ", Cur=" + m_C_Currency_ID);
 		//  Need to have both values
 		if (m_C_BPartner_ID == 0 || m_C_Currency_ID == 0)
 			return;
 
 		//	Async BPartner Test
-		Integer key = new Integer(m_C_BPartner_ID);
+		Integer key = Integer.valueOf(m_C_BPartner_ID);
 		if (!m_bpartnerCheck.contains(key))
 		{
 			new Thread()
@@ -109,20 +109,20 @@ public class Allocation
 			m_bpartnerCheck.add(key);
 		}
 	}
-	
+
 	/**
 	 *  Load Business Partner Info
 	 *  - Invoices
 	 */
 	public void checkBPartner2()
-	{		
+	{
 		if (log.isLoggable(Level.CONFIG)) log.config("BPartner=" + m_C_BPartner2_ID + ", Cur=" + m_C_Currency_ID);
 		//  Need to have both values
 		if (m_C_BPartner2_ID == 0 || m_C_Currency_ID == 0)
 			return;
 
 		//	Async BPartner Test
-		Integer key = new Integer(m_C_BPartner2_ID);
+		Integer key = Integer.valueOf(m_C_BPartner2_ID);
 		if (!m_bpartnerCheck.contains(key))
 		{
 			new Thread()
@@ -136,9 +136,9 @@ public class Allocation
 			m_bpartnerCheck.add(key);
 		}
 	}
-	
+
 	public Vector<Vector<Object>> getPaymentData(boolean isMultiCurrency, Object date, IMiniTable paymentTable)
-	{		
+	{
 		/********************************
 		 *  Load unallocated Payments
 		 *      1-TrxDate, 2-DocumentNo, (3-Currency, 4-PayAmt,)
@@ -160,10 +160,10 @@ public class Allocation
 		if (m_AD_Org_ID != 0 )
 			sql.append(" AND p.AD_Org_ID=" + m_AD_Org_ID);
 		sql.append(" ORDER BY p.DateTrx,p.DocumentNo");
-		
+
 		// role security
 		sql = new StringBuilder( MRole.getDefault(Env.getCtx(), false).addAccessSQL( sql.toString(), "p", MRole.SQL_FULLYQUALIFIED, MRole.SQL_RO ) );
-		
+
 		if (log.isLoggable(Level.FINE)) log.fine("PaySQL=" + sql.toString());
 		PreparedStatement pstmt = null;
 		ResultSet rs = null;
@@ -181,7 +181,7 @@ public class Allocation
 			while (rs.next())
 			{
 				Vector<Object> line = new Vector<Object>();
-				line.add(new Boolean(false));       //  0-Selection
+				line.add(Boolean.FALSE);       //  0-Selection
 				line.add(rs.getTimestamp(1));       //  1-TrxDate
 				KeyNamePair pp = new KeyNamePair(rs.getInt(3), rs.getString(2));
 				line.add(pp);                       //  2-DocumentNo
@@ -209,12 +209,12 @@ public class Allocation
 		{
 			DB.close(rs, pstmt);
 		}
-		
+
 		return data;
 	}
-	
+
 	public Vector<String> getPaymentColumnNames(boolean isMultiCurrency)
-	{	
+	{
 		//  Header Info
 		Vector<String> columnNames = new Vector<String>();
 		columnNames.add(Msg.getMsg(Env.getCtx(), "Select"));
@@ -229,10 +229,10 @@ public class Allocation
 		columnNames.add(Msg.getMsg(Env.getCtx(), "OpenAmt"));
 		columnNames.add(Msg.getMsg(Env.getCtx(), "AppliedAmt"));
 //		columnNames.add(" ");	//	Multiplier
-		
+
 		return columnNames;
 	}
-	
+
 	public void setPaymentColumnClass(IMiniTable paymentTable, boolean isMultiCurrency)
 	{
 		int i = 0;
@@ -251,28 +251,28 @@ public class Allocation
 
 		//
 		i_payment = isMultiCurrency ? 7 : 5;
-		
+
 
 		//  Table UI
 		paymentTable.autoSize();
 	}
-	
+
 	public Vector<Vector<Object>> getInvoiceData(boolean isMultiCurrency, Object date, IMiniTable invoiceTable)
 	{
 		/********************************
 		 *  Load unpaid Invoices
 		 *      1-TrxDate, 2-Value, (3-Currency, 4-InvAmt,)
 		 *      5-ConvAmt, 6-ConvOpen, 7-ConvDisc, 8-WriteOff, 9-Applied
-		 * 
+		 *
 		 SELECT i.DateInvoiced,i.DocumentNo,i.C_Invoice_ID,c.ISO_Code,
-		 i.GrandTotal*i.MultiplierAP "GrandTotal", 
-		 currencyConvert(i.GrandTotal*i.MultiplierAP,i.C_Currency_ID,i.C_Currency_ID,i.DateInvoiced,i.C_ConversionType_ID,i.AD_Client_ID,i.AD_Org_ID) "GrandTotal $", 
+		 i.GrandTotal*i.MultiplierAP "GrandTotal",
+		 currencyConvert(i.GrandTotal*i.MultiplierAP,i.C_Currency_ID,i.C_Currency_ID,i.DateInvoiced,i.C_ConversionType_ID,i.AD_Client_ID,i.AD_Org_ID) "GrandTotal $",
 		 invoiceOpen(C_Invoice_ID,C_InvoicePaySchedule_ID) "Open",
-		 currencyConvert(invoiceOpen(C_Invoice_ID,C_InvoicePaySchedule_ID),i.C_Currency_ID,i.C_Currency_ID,i.DateInvoiced,i.C_ConversionType_ID,i.AD_Client_ID,i.AD_Org_ID)*i.MultiplierAP "Open $", 
+		 currencyConvert(invoiceOpen(C_Invoice_ID,C_InvoicePaySchedule_ID),i.C_Currency_ID,i.C_Currency_ID,i.DateInvoiced,i.C_ConversionType_ID,i.AD_Client_ID,i.AD_Org_ID)*i.MultiplierAP "Open $",
 		 invoiceDiscount(i.C_Invoice_ID,SysDate,C_InvoicePaySchedule_ID) "Discount",
 		 currencyConvert(invoiceDiscount(i.C_Invoice_ID,SysDate,C_InvoicePaySchedule_ID),i.C_Currency_ID,i.C_Currency_ID,i.DateInvoiced,i.C_ConversionType_ID,i.AD_Client_ID,i.AD_Org_ID)*i.Multiplier*i.MultiplierAP "Discount $",
-		 i.MultiplierAP, i.Multiplier 
-		 FROM C_Invoice_v i INNER JOIN C_Currency c ON (i.C_Currency_ID=c.C_Currency_ID) 
+		 i.MultiplierAP, i.Multiplier
+		 FROM C_Invoice_v i INNER JOIN C_Currency c ON (i.C_Currency_ID=c.C_Currency_ID)
 		 WHERE -- i.IsPaid='N' AND i.Processed='Y' AND i.C_BPartner_ID=1000001
 		 */
 		Vector<Vector<Object>> data = new Vector<Vector<Object>>();
@@ -289,14 +289,14 @@ public class Allocation
 			+ " AND i.C_BPartner_ID=?");                                            //  #7
 		if (!isMultiCurrency)
 			sql.append(" AND i.C_Currency_ID=?");                                   //  #8
-		if (m_AD_Org_ID != 0 ) 
+		if (m_AD_Org_ID != 0 )
 			sql.append(" AND i.AD_Org_ID=" + m_AD_Org_ID);
 		sql.append(" ORDER BY i.DateInvoiced, i.DocumentNo");
 		if (log.isLoggable(Level.FINE)) log.fine("InvSQL=" + sql.toString());
-		
+
 		// role security
 		sql = new StringBuilder( MRole.getDefault(Env.getCtx(), false).addAccessSQL( sql.toString(), "i", MRole.SQL_FULLYQUALIFIED, MRole.SQL_RO ) );
-		
+
 		PreparedStatement pstmt = null;
 		ResultSet rs = null;
 		try
@@ -315,7 +315,7 @@ public class Allocation
 			while (rs.next())
 			{
 				Vector<Object> line = new Vector<Object>();
-				line.add(new Boolean(false));       //  0-Selection
+				line.add(Boolean.FALSE);       //  0-Selection
 				line.add(rs.getTimestamp(1));       //  1-TrxDate
 				KeyNamePair pp = new KeyNamePair(rs.getInt(3), rs.getString(2));
 				line.add(pp);                       //  2-Value
@@ -351,7 +351,7 @@ public class Allocation
 		{
 			DB.close(rs, pstmt);
 		}
-		
+
 		return data;
 	}
 
@@ -374,10 +374,10 @@ public class Allocation
 		columnNames.add(Msg.getMsg(Env.getCtx(), "AppliedAmt"));
 		columnNames.add(Msg.getMsg(Env.getCtx(), "OverUnderAmt"));
 //		columnNames.add(" ");	//	Multiplier
-		
+
 		return columnNames;
 	}
-	
+
 	public void setInvoiceColumnClass(IMiniTable invoiceTable, boolean isMultiCurrency)
 	{
 		int i = 0;
@@ -399,7 +399,7 @@ public class Allocation
 		//  Table UI
 		invoiceTable.autoSize();
 	}
-	
+
 	public void calculate(boolean isMultiCurrency)
 	{
 		i_open = isMultiCurrency ? 6 : 4;
@@ -409,7 +409,7 @@ public class Allocation
 		i_overUnder = isMultiCurrency ? 10 : 8;
 //		i_multiplier = isMultiCurrency ? 10 : 8;
 	}   //  loadBPartner
-	
+
 	public String writeOff(int row, int col, boolean isInvoice, IMiniTable payment, IMiniTable invoice, boolean isAutoWriteOff)
 	{
 		String msg = "";
@@ -419,16 +419,16 @@ public class Allocation
 		if (m_calculating)  //  Avoid recursive calls
 			return msg;
 		m_calculating = true;
-		
-		if (log.isLoggable(Level.CONFIG)) log.config("Row=" + row 
+
+		if (log.isLoggable(Level.CONFIG)) log.config("Row=" + row
 			+ ", Col=" + col + ", InvoiceTable=" + isInvoice);
-        
+
 		//  Payments
 		if (!isInvoice)
 		{
 			BigDecimal open = (BigDecimal)payment.getValueAt(row, i_open);
 			BigDecimal applied = (BigDecimal)payment.getValueAt(row, i_payment);
-			
+
 			if (col == 0)
 			{
 				// selection of payment row
@@ -438,13 +438,13 @@ public class Allocation
 					if (totalDiff.abs().compareTo(applied.abs()) < 0			// where less is available to allocate than open
 							&& totalDiff.signum() == -applied.signum() )    	// and the available amount has the opposite sign
 						applied = totalDiff.negate();						// reduce the amount applied to what's available
-					
+
 				}
 				else    //  de-selected
 					applied = Env.ZERO;
 			}
-			
-			
+
+
 			if (col == i_payment)
 			{
 				if ( applied.signum() == -open.signum() )
@@ -452,12 +452,12 @@ public class Allocation
 				if ( open.abs().compareTo( applied.abs() ) < 0 )
 							applied = open;
 			}
-			
+
 			payment.setValueAt(applied, row, i_payment);
 		}
 
 		//  Invoice
-		else 
+		else
 		{
 			boolean selected = ((Boolean) invoice.getValueAt(row, 0)).booleanValue();
 			BigDecimal open = (BigDecimal)invoice.getValueAt(row, i_open);
@@ -466,7 +466,7 @@ public class Allocation
 			BigDecimal writeOff = (BigDecimal) invoice.getValueAt(row, i_writeOff);
 			BigDecimal overUnder = (BigDecimal) invoice.getValueAt(row, i_overUnder);
 			int openSign = open.signum();
-			
+
 			if (col == 0)  //selection
 			{
 				//  selected - set applied amount
@@ -494,11 +494,11 @@ public class Allocation
 					overUnder = Env.ZERO;
 				}
 			}
-			
+
 			// check entered values are sensible and possibly auto write-off
 			if ( selected && col != 0 )
 			{
-				
+
 				// values should have same sign as open except possibly over/under
 				if ( discount.signum() == -openSign )
 					discount = discount.negate();
@@ -506,52 +506,52 @@ public class Allocation
 					writeOff = writeOff.negate();
 				if ( applied.signum() == -openSign )
 					applied = applied.negate();
-				
+
 				// discount and write-off must be less than open amount
 				if ( discount.abs().compareTo(open.abs()) > 0)
 					discount = open;
 				if ( writeOff.abs().compareTo(open.abs()) > 0)
 					writeOff = open;
-				
-				
+
+
 				/*
 				 * Two rules to maintain:
 				 *
-				 * 1) |writeOff + discount| < |open| 
+				 * 1) |writeOff + discount| < |open|
 				 * 2) discount + writeOff + overUnder + applied = 0
 				 *
 				 *   As only one column is edited at a time and the initial position was one of compliance
-				 *   with the rules, we only need to redistribute the increase/decrease in the edited column to 
+				 *   with the rules, we only need to redistribute the increase/decrease in the edited column to
 				 *   the others.
 				*/
 				BigDecimal newTotal = discount.add(writeOff).add(applied).add(overUnder);  // all have same sign
 				BigDecimal difference = newTotal.subtract(open);
-				
+
 				// rule 2
 				BigDecimal diffWOD = writeOff.add(discount).subtract(open);
-										
+
 				if ( diffWOD.signum() == open.signum() )  // writeOff and discount are too large
 				{
 					if ( col == i_discount )       // then edit writeoff
 					{
 						writeOff = writeOff.subtract(diffWOD);
-					} 
+					}
 					else                            // col = i_writeoff
 					{
 						discount = discount.subtract(diffWOD);
 					}
-					
+
 					difference = difference.subtract(diffWOD);
 				}
-				
+
 				// rule 1
 				if ( col == i_applied )
 					overUnder = overUnder.subtract(difference);
 				else
 					applied = applied.subtract(difference);
-				
+
 			}
-			
+
 			//	Warning if write Off > 30%
 			if (isAutoWriteOff && writeOff.doubleValue()/open.doubleValue() > .30)
 				msg = "AllocationWriteOffWarn";
@@ -563,10 +563,10 @@ public class Allocation
 		}
 
 		m_calculating = false;
-		
+
 		return msg;
 	}
-	
+
 	/**
 	 *  Calculate Allocation info
 	 */
@@ -594,9 +594,9 @@ public class Allocation
 		return String.valueOf(m_noPayments) + " - "
 			+ Msg.getMsg(Env.getCtx(), "Sum") + "  " + format.format(totalPay) + " ";
 	}
-	
+
 	public String calculateInvoice(IMiniTable invoice, boolean isMultiCurrency)
-	{		
+	{
 		//  Invoices
 		totalInv = Env.ZERO;
 		int rows = invoice.getRowCount();
@@ -618,7 +618,7 @@ public class Allocation
 		return String.valueOf(m_noInvoices) + " - "
 			+ Msg.getMsg(Env.getCtx(), "Sum") + "  " + format.format(totalInv) + " ";
 	}
-	
+
 	/**************************************************************************
 	 *  Save Data
 	 */
@@ -658,14 +658,14 @@ public class Allocation
 				KeyNamePair pp = (KeyNamePair)payment.getValueAt(i, 2);   //  Value
 				//  Payment variables
 				int C_Payment_ID = pp.getKey();
-				paymentList.add(new Integer(C_Payment_ID));
+				paymentList.add(Integer.valueOf(C_Payment_ID));
 				//
 				BigDecimal PaymentAmt = (BigDecimal)payment.getValueAt(i, i_payment);  //  Applied Payment
 				amountList.add(PaymentAmt);
 				//
 				paymentAppliedAmt = paymentAppliedAmt.add(PaymentAmt);
 				//
-				if (log.isLoggable(Level.FINE)) log.fine("C_Payment_ID=" + C_Payment_ID 
+				if (log.isLoggable(Level.FINE)) log.fine("C_Payment_ID=" + C_Payment_ID
 					+ " - PaymentAmt=" + PaymentAmt); // + " * " + Multiplier + " = " + PaymentAmtAbs);
 			}
 		}
@@ -673,7 +673,7 @@ public class Allocation
 
 		//  Invoices - Loop and generate allocations
 		int iRows = invoice.getRowCount();
-		
+
 		//	Create Allocation
 		MAllocationHdr alloc = new MAllocationHdr (Env.getCtx(), true,	//	manual
 			DateTrx, C_Currency_ID, Env.getContext(Env.getCtx(), "#AD_User_Name"), trxName);
@@ -696,10 +696,10 @@ public class Allocation
 				//	OverUnderAmt needs to be in Allocation Currency
 				BigDecimal OverUnderAmt = ((BigDecimal)invoice.getValueAt(i, i_open))
 					.subtract(AppliedAmt).subtract(DiscountAmt).subtract(WriteOffAmt);
-				
+
 				if (log.isLoggable(Level.CONFIG)) log.config("Invoice #" + i + " - AppliedAmt=" + AppliedAmt);// + " -> " + AppliedAbs);
 				//  loop through all payments until invoice applied
-				
+
 				for (int j = 0; j < paymentList.size() && AppliedAmt.signum() != 0; j++)
 				{
 					int C_Payment_ID = ((Integer)paymentList.get(j)).intValue();
@@ -707,13 +707,13 @@ public class Allocation
 					if (PaymentAmt.signum() == AppliedAmt.signum())	// only match same sign (otherwise appliedAmt increases)
 					{												// and not zero (appliedAmt was checked earlier)
 						if (log.isLoggable(Level.CONFIG)) log.config(".. with payment #" + j + ", Amt=" + PaymentAmt);
-						
+
 						BigDecimal amount = AppliedAmt;
 						if (amount.abs().compareTo(PaymentAmt.abs()) > 0)  // if there's more open on the invoice
 							amount = PaymentAmt;							// than left in the payment
-						
+
 						//	Allocation Line
-						MAllocationLine aLine = new MAllocationLine (alloc, amount, 
+						MAllocationLine aLine = new MAllocationLine (alloc, amount,
 							DiscountAmt, WriteOffAmt, OverUnderAmt);
 						aLine.setDocInfo(C_BPartner_ID, C_Order_ID, C_Invoice_ID);
 						aLine.setPaymentInfo(C_Payment_ID, C_CashLine_ID);
@@ -729,14 +729,14 @@ public class Allocation
 						amountList.set(j, PaymentAmt);  //  update
 					}	//	for all applied amounts
 				}	//	loop through payments for invoice
-				
+
 				if ( AppliedAmt.signum() == 0 && DiscountAmt.signum() == 0 && WriteOffAmt.signum() == 0)
 					continue;
 				else {			// remainder will need to match against other invoices
 					int C_Payment_ID = 0;
-					
+
 					//	Allocation Line
-					MAllocationLine aLine = new MAllocationLine (alloc, AppliedAmt, 
+					MAllocationLine aLine = new MAllocationLine (alloc, AppliedAmt,
 						DiscountAmt, WriteOffAmt, OverUnderAmt);
 					aLine.setDocInfo(C_BPartner_ID, C_Order_ID, C_Invoice_ID);
 					aLine.setPaymentInfo(C_Payment_ID, C_CashLine_ID);
@@ -753,25 +753,25 @@ public class Allocation
 			if ( payAmt.signum() == 0 )
 					continue;
 			int C_Payment_ID = ((Integer)paymentList.get(i)).intValue();
-			if (log.isLoggable(Level.FINE)) log.fine("Payment=" + C_Payment_ID  
+			if (log.isLoggable(Level.FINE)) log.fine("Payment=" + C_Payment_ID
 					+ ", Amount=" + payAmt);
 
 			//	Allocation Line
-			MAllocationLine aLine = new MAllocationLine (alloc, payAmt, 
+			MAllocationLine aLine = new MAllocationLine (alloc, payAmt,
 				Env.ZERO, Env.ZERO, Env.ZERO);
 			aLine.setDocInfo(C_BPartner_ID, 0, 0);
 			aLine.setPaymentInfo(C_Payment_ID, 0);
 			aLine.saveEx();
 			unmatchedApplied = unmatchedApplied.subtract(payAmt);
-		}		
-		
+		}
+
 		// check for charge amount
 		if ( m_C_Charge_ID > 0 && unmatchedApplied.compareTo(Env.ZERO) != 0 )
 		{
 			BigDecimal chargeAmt = totalDiff;
-	
+
 		//	Allocation Line
-			MAllocationLine aLine = new MAllocationLine (alloc, chargeAmt.negate(), 
+			MAllocationLine aLine = new MAllocationLine (alloc, chargeAmt.negate(),
 				Env.ZERO, Env.ZERO, Env.ZERO);
 			aLine.setC_Charge_ID(m_C_Charge_ID);
 			aLine.setC_BPartner_ID(m_C_BPartner_ID);
@@ -780,8 +780,8 @@ public class Allocation
 				throw new AdempiereException(msg.toString());
 			}
 			unmatchedApplied = unmatchedApplied.add(chargeAmt);
-		}	
-		
+		}
+
 		if ( unmatchedApplied.signum() != 0 )
 			log.log(Level.SEVERE, "Allocation not balanced -- out by " + unmatchedApplied );
 
@@ -792,7 +792,7 @@ public class Allocation
 				throw new AdempiereException("Cannot complete allocation: " + alloc.getProcessMsg());
 			alloc.saveEx();
 		}
-		
+
 		//  Test/Set IsPaid for Invoice - requires that allocation is posted
 		for (int i = 0; i < iRows; i++)
 		{
@@ -822,12 +822,12 @@ public class Allocation
 			MPayment pay = new MPayment (Env.getCtx(), C_Payment_ID, trxName);
 			if (pay.testAllocation())
 				pay.saveEx();
-			if (log.isLoggable(Level.CONFIG)) log.config("Payment #" + i + (pay.isAllocated() ? " not" : " is") 
+			if (log.isLoggable(Level.CONFIG)) log.config("Payment #" + i + (pay.isAllocated() ? " not" : " is")
 					+ " fully allocated");
 		}
 		paymentList.clear();
 		amountList.clear();
-		
+
 		return alloc;
 	}   //  saveData
 }
