@@ -318,7 +318,7 @@ public class WAllocation extends Allocation
 		int AD_Column_ID = COLUMN_C_INVOICE_C_CURRENCY_ID;    //  C_Invoice.C_Currency_ID
 		MLookup lookupCur = MLookupFactory.get (Env.getCtx(), form.getWindowNo(), 0, AD_Column_ID, DisplayType.TableDir);
 		currencyPick = new WTableDirEditor("C_Currency_ID", true, false, true, lookupCur);
-		currencyPick.setValue(new Integer(m_C_Currency_ID));
+		currencyPick.setValue(Integer.valueOf(m_C_Currency_ID));
 		currencyPick.addValueChangeListener(this);
 
 		// Organization filter selection
@@ -353,7 +353,7 @@ public class WAllocation extends Allocation
 		AD_Column_ID = 61804;    //  C_AllocationLine.C_Charge_ID
 		MLookup lookupCharge = MLookupFactory.get (Env.getCtx(), form.getWindowNo(), 0, AD_Column_ID, DisplayType.TableDir);
 		chargePick = new WTableDirEditor("C_Charge_ID", false, false, true, lookupCharge);
-		chargePick.setValue(new Integer(m_C_Charge_ID));
+		chargePick.setValue(Integer.valueOf(m_C_Charge_ID));
 		chargePick.addValueChangeListener(this);
 	}   //  dynInit
 
